--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ button:hover {
     0 4px 6px 0 #cecece;
     cursor: pointer;
 }
-@media (max-width: 768px) {/
+@media (max-width: 768px) {
     button {
         width:50%
     }
