--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ header {
     top: 25%;
     left: 50%;
     transform: translate(-50%,-50%);
-    font-size: 50px;
+    font-size: 4vw;
     background-color: #16161f;
     display:none;
 }
