--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,9 @@ body {
 header {
     font-size: 40px;
 }
+button {
+    color:black;
+}
 #gray-box {
     cursor:not-allowed;
     position: fixed;
@@ -82,12 +85,14 @@ header {
 #reset {
     border:white solid;
     background-color: black;
+    color:white;
     position: absolute;
     top:0;
     left:0;
     cursor: pointer;
 }
 #roll{
+    color:white;
     background-color: green;
     border: white solid 3px;
     font-size: 40px;
@@ -134,8 +139,7 @@ header {
 #update-log > p {
     text-align: left;
 }
-.delete,#toggle{
-    color:black;
+#toggle{
     cursor: pointer;
 }
 #toggle {
