--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,16 @@ button {
     width:20vw;
     height:20vw;
 }
+#auto {
+    width:50px;
+    height:50px;
+    background-color: red;
+    color:white;
+    border:white;
+    border-radius: 20%;
+    display:none;
+    cursor:pointer;
+}
 @media (max-width: 768px) {
     #display{
         font-size:20px;
