--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@
 }
 body {
     background-color: black;
+    padding: 0%;
+    margin: 0%;
 }
 header {
     font-size: 40px;
@@ -20,7 +22,7 @@ button {
 #gray-box {
     cursor:not-allowed;
     position: fixed;
-    z-index: 98;
+    z-index: 50;
     top: 0;
     left:0;
     width:100%;
@@ -158,6 +160,7 @@ button {
 }
 #rarest {
     position: absolute;
+    font-size: 1em;
     right:0;
     top:25%;
 }
@@ -166,14 +169,78 @@ button {
     height:20vw;
 }
 #auto {
+    position: absolute;
+    transform: translate(10px,10px);
+    z-index: 101;
     width:50px;
     height:50px;
     background-color: red;
     color:white;
-    border:white;
+    border:white solid 2px;
     border-radius: 20%;
     display:none;
     cursor:pointer;
+}
+#menu {
+    position:fixed;
+    text-align: center;
+    padding:0%;
+    margin: 0%;
+    top: 0%;
+    right: 0%;
+}
+#icon {
+    margin: 0;
+    padding:10px;
+    padding-bottom: 0px;
+    font-size:30px;
+    cursor:pointer;
+}
+#links {
+    padding:0%;
+    position: absolute;
+    right:0;
+    width:150px;
+    background-color: #cacaca;
+    display:none;
+}
+#links > a {
+    border-bottom: rgb(122, 122, 122) solid 1px;
+    display:block;
+    font-size:12px;
+    color:black;
+    padding:5px;
+}
+#links > a:hover {
+    background-color: #373737;
+    color:white;
+}
+#modal1 {
+    display:none;
+    position: fixed;
+    top: 50%;
+    left:50%;
+    background-color: #000000;
+    z-index:101;
+    transform: translate(-50%,-50%);
+    text-align: left;
+    width:50vw;
+    height:50vh;
+    border:solid white;
+
+}
+#modal1 > p {
+    color:rgb(255, 255, 255);
+}
+#close1 {
+    color:red;
+    padding:10px;
+    font-weight:bold;
+    cursor:pointer;
+    text-align: right;
+    position: relative;
+    right:0;
+    top:0;
 }
 @media (max-width: 768px) {
     #display{
